--- a/app/views/entries/show.html.erb
+++ b/app/views/entries/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Entries#show</h1>
-<p>Find me in app/views/entries/show.html.erb</p>
+<h1><%= @entry.subject %></h1>
+
+<%= @entry.body %><br><br>
+<em>- <%= @entry.name %></em>
+
