--- a/app/views/entries/edit.html.erb
+++ b/app/views/entries/edit.html.erb
@@ -1,2 +1,15 @@
-<h1>Entries#edit</h1>
-<p>Find me in app/views/entries/edit.html.erb</p>
+<h1>Edit your Journal entry:</h1>
+
+<%= form_for  @entry do |f| %>
+    <%= f.label 'Name' %>
+    <%= f.text_field :name %><br><br>
+
+    <%= f.label 'Subject' %><br>
+    <%= f.text_field :subject %><br><br>
+    
+    <%= f.label 'Body' %><br>
+    <%= f.text_area :body %><br><br>
+
+    <%= f.submit 'Submit Entry' %>
+
+<% end %>
