added link_to methods on all view html

--- a/app/views/entries/index.html.erb
+++ b/app/views/entries/index.html.erb
@@ -5,3 +5,5 @@
         <%= link_to entry.name, entry_path(entry)%> | <%= entry.subject %>
     </div>
 <% end %>
+<br>
+<%= link_to 'Add a new entry', new_entry_path%>
